Configurado para Docker y PostgreSQL